{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 62,
  "lineage": "55df686c-6a14-79d6-1592-7d10a42b87d0",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-appgw/providers/Microsoft.Network/applicationGateways/appgw-k3s/backendAddressPools/backendpool",
                "ip_addresses": [
                  "10.0.2.4"
                ],
                "name": "backendpool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "dedicated_backend_connection_enabled": false,
                "host_name": "",
                "id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-appgw/providers/Microsoft.Network/applicationGateways/appgw-k3s/backendHttpSettingsCollection/http-settings",
                "name": "http-settings",
                "path": "",
                "pick_host_name_from_backend_address": true,
                "port": 30080,
                "probe_id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-appgw/providers/Microsoft.Network/applicationGateways/appgw-k3s/probes/k3s-probe",
                "probe_name": "k3s-probe",
                "protocol": "Http",
                "request_timeout": 30,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-appgw/providers/Microsoft.Network/applicationGateways/appgw-k3s/frontendIPConfigurations/frontend",
                "name": "frontend",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-appgw/providers/Microsoft.Network/publicIPAddresses/appgw-public-ip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-appgw/providers/Microsoft.Network/applicationGateways/appgw-k3s/frontendPorts/port80",
                "name": "port80",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-appgw/providers/Microsoft.Network/applicationGateways/appgw-k3s/gatewayIPConfigurations/appgw-ipconfig",
                "name": "appgw-ipconfig",
                "subnet_id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-network/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/snet-appgw"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-appgw/providers/Microsoft.Network/applicationGateways/appgw-k3s/frontendIPConfigurations/frontend",
                "frontend_ip_configuration_name": "frontend",
                "frontend_port_id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-appgw/providers/Microsoft.Network/applicationGateways/appgw-k3s/frontendPorts/port80",
                "frontend_port_name": "port80",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-appgw/providers/Microsoft.Network/applicationGateways/appgw-k3s/httpListeners/listener",
                "name": "listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-appgw/providers/Microsoft.Network/applicationGateways/appgw-k3s",
            "identity": [],
            "location": "centralindia",
            "name": "appgw-k3s",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "127.0.0.1",
                "id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-appgw/providers/Microsoft.Network/applicationGateways/appgw-k3s/probes/k3s-probe",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "k3s-probe",
                "path": "/",
                "pick_host_name_from_backend_http_settings": false,
                "port": 30080,
                "protocol": "Http",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-appgw/providers/Microsoft.Network/applicationGateways/appgw-k3s/backendAddressPools/backendpool",
                "backend_address_pool_name": "backendpool",
                "backend_http_settings_id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-appgw/providers/Microsoft.Network/applicationGateways/appgw-k3s/backendHttpSettingsCollection/http-settings",
                "backend_http_settings_name": "http-settings",
                "http_listener_id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-appgw/providers/Microsoft.Network/applicationGateways/appgw-k3s/httpListeners/listener",
                "http_listener_name": "listener",
                "id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-appgw/providers/Microsoft.Network/applicationGateways/appgw-k3s/requestRoutingRules/rule1",
                "name": "rule1",
                "priority": 1,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "rg-appgw",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 1,
                "name": "WAF_v2",
                "tier": "WAF_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [
              {
                "disabled_rule_group": [],
                "enabled": true,
                "exclusion": [],
                "file_upload_limit_mb": 100,
                "firewall_mode": "Detection",
                "max_request_body_size_kb": 128,
                "request_body_check": true,
                "rule_set_type": "OWASP",
                "rule_set_version": "3.2"
              }
            ],
            "zones": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "appgw-k3s",
            "resource_group_name": "rg-appgw",
            "subscription_id": "bff7c565-ed2e-48c9-bd8d-9285d45dca59"
          },
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_public_ip.appgw_ip",
            "azurerm_public_ip.vm_ip",
            "azurerm_resource_group.app",
            "azurerm_resource_group.appgw",
            "azurerm_resource_group.network",
            "azurerm_subnet.subnet_appgw",
            "azurerm_subnet.subnet_vm",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-app/providers/Microsoft.Network/networkInterfaces/nic-vm",
            "internal_domain_name_suffix": "lf3oygnsv1uebdpvlz12a5iqbd.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "vm-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-app/providers/Microsoft.Network/publicIPAddresses/vm-public-ip",
                "subnet_id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-network/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/snet-vm"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "mac_address": "7C-ED-8D-27-57-50",
            "name": "nic-vm",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "rg-app",
            "virtual_machine_id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-app/providers/Microsoft.Compute/virtualMachines/vm-k3s"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "nic-vm",
            "resource_group_name": "rg-app",
            "subscription_id": "bff7c565-ed2e-48c9-bd8d-9285d45dca59"
          },
          "dependencies": [
            "azurerm_public_ip.vm_ip",
            "azurerm_resource_group.app",
            "azurerm_resource_group.network",
            "azurerm_subnet.subnet_vm",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-app/providers/Microsoft.Network/networkSecurityGroups/k3s-nsg",
            "location": "centralindia",
            "name": "k3s-nsg",
            "resource_group_name": "rg-app",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "32302",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-NodePort-32302",
                "priority": 502,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "k3s-nsg",
            "resource_group_name": "rg-app",
            "subscription_id": "bff7c565-ed2e-48c9-bd8d-9285d45dca59"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "appgw_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-appgw/providers/Microsoft.Network/publicIPAddresses/appgw-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.247.151.190",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "appgw-public-ip",
            "resource_group_name": "rg-appgw",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.appgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-app/providers/Microsoft.Network/publicIPAddresses/vm-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "74.225.184.117",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "vm-public-ip",
            "resource_group_name": "rg-app",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-app/providers/Microsoft.Network/virtualNetworks/k3s-vnet/subnets/k3s-subnet",
            "name": "k3s-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-app",
            "virtual_network_name": "k3s-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "k3s-subnet",
            "resource_group_name": "rg-app",
            "subscription_id": "bff7c565-ed2e-48c9-bd8d-9285d45dca59",
            "virtual_network_name": "k3s-vnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-network/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/snet-appgw",
            "name": "snet-appgw",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-network",
            "virtual_network_name": "vnet-app"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-appgw",
            "resource_group_name": "rg-network",
            "subscription_id": "bff7c565-ed2e-48c9-bd8d-9285d45dca59",
            "virtual_network_name": "vnet-app"
          },
          "dependencies": [
            "azurerm_resource_group.network",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-network/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/snet-vm",
            "name": "snet-vm",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-network",
            "virtual_network_name": "vnet-app"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-vm",
            "resource_group_name": "rg-network",
            "subscription_id": "bff7c565-ed2e-48c9-bd8d-9285d45dca59",
            "virtual_network_name": "vnet-app"
          },
          "dependencies": [
            "azurerm_resource_group.network",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "172511f5-dc42-4d76-8416-fa6e5c5f1260",
            "id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-app/providers/Microsoft.Network/virtualNetworks/k3s-vnet",
            "location": "centralindia",
            "name": "k3s-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-app",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-app/providers/Microsoft.Network/virtualNetworks/k3s-vnet/subnets/k3s-subnet",
                "name": "k3s-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/bff7c565-ed2e-48c9-bd8d-9285d45dca59/resourceGroups/rg-app/providers/Microsoft.Network/networkSecurityGroups/k3s-nsg"
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "k3s-vnet",
            "resource_group_name": "rg-app",
            "subscription_id": "bff7c565-ed2e-48c9-bd8d-9285d45dca59"
          }
        }
      ]
    }
  ]
}